[package]
name = "distant-horizons"
version = "0.1.0"
edition = "2024"

[features]
default = ["gui"]
gui = ["dep:bevy"]

[dependencies]
anyhow = { version = "1.0" }
duckdb = { version = "1.2", default-features = false }
simd_cesu8 = "1.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", optional = true }
xz2 = "0.1"

[dependencies.bevy]
version = "0.15.2"
optional = true
default-features = false
features = [
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "bevy_ui",
    "asset_processor",
    # "dynamic_linking",
    "x11",
    # "wayland",
]

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
